--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.4.6",
+    "langs": "^2.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^7.0.0",
     "recharts": "^2.15.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
