--- a/Back/.env
+++ b/Back/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-MONGODB_PATH = mongodb://127.0.0.1:27017/audiobook
+MONGODB_PATH = mongodb+srv://akshayvaghasiya814:*****@cluster0.se95gol.mongodb.net/audiobook
 SECRET_KEY = qwertyuiopasdf,ghjklzxcvbnmzx,vbnjghj5573738,llsgghsuyhd67
 EMAIL_USER = jay.kalathiyainfotech123@gmail.com
 EMAIL_PASS = oaow aphw mzrg gypu
